objects/BD_Extended_Warranty_Part__c.object
<CustomObject>
    <description>Extended Warranty Parts are mappings of Equipment Products to their Child Parts that should be covered under an Extended Warranty.</description>
    <label>Extended Warranty Part</label>
    <nameField>
        <displayFormat>EWP-{00000000}</displayFormat>
        <label>Extended Warranty Part Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Extended Warranty Parts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>BD_Sales_Org__c</fullName>
        <label>Sales Org</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BD_Is_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BD_Covered_Part__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Covered Part</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Extended Warranty Parts (Covered Part)</relationshipLabel>
        <relationshipName>Extended_Warranty_Parts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BD_External_Key__c</fullName>
        <externalId>true</externalId>
        <label>External Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BD_Extended_Months__c</fullName>
        <label>Extended Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BD_Last_Txn_Number__c</fullName>
        <label>Last Txn Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BD_Equipment_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Equipment Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Extended Warranty Parts</relationshipLabel>
        <relationshipName>Extended_Warranty_Equipment</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>